[package]
name = "example"
version = "0.1.0"
authors = ["Rasmus Eneman <rasmus@eneman.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus-futures = { path = ".." }
futures-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"
libpulse-binding = "2.11.1"